# ai-trend-publish

./: .env.example  .gitignore  AI_MODELS_CONFIG.md  CLOUDFLARE_DEPLOYMENT.md  CLOUD_START_GUIDE.md  COMPLETE_WECHAT_GUIDE.md  COZE_FINAL_IMPORT_GUIDE.md  COZE_IMPORT_OPTIMIZED.md  COZE_PLUGIN_GUIDE.md  COZE_QUICK_START.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOY_GUIDE.md  FINAL_README.md  FINAL_SUMMARY.md  IP_WHITELIST_CHECKLIST.md  MANUAL_DEPLOY.md  MANUAL_START.md  N8N_AUTO_WORKFLOW_GUIDE.md  N8N_WORKFLOW_GUIDE.md  PROJECT_HANDOVER.md  PUBLIC_ACCOUNT_IP_WHITELIST_GUIDE.md  PUBLISH_API_COMPLETE.md  QUICK_FIX.md  QUICK_START.md  README.md  README_AUTOMATION.md  README_AUTO_PUBLISH.md  README_WECHAT_PUBLISHER.md  SETUP_COMPLETE.md  TESTING_GUIDE.md  TEST_GUIDE_SIMPLIFIED.md  TEST_REPORT.md  UPDATE_EXISTING_WORKFLOW.md  USAGE.md  VERCEL_DEPLOYMENT.md  WECHAT_IP_WHITELIST_OFFICIAL_GUIDE.md  WECHAT_PUBLISHER_GUIDE.md  WECHAT_PUBLISH_API_GUIDE.md  WORKFLOW_FIXED.md  (+32 more)
.claude/: AARDIO_API_GUIDE.md  AI_MODELS_GUIDE.md  AUTO_START_GUIDE.md  DISK_CLEANUP_GUIDE.md  DOCKER_REMOVAL_GUIDE.md  FINAL_SUMMARY.md  MODEL_SWITCHING_GUIDE.md  OPUS_4.5_GUIDE.md  check-api-health.bat  check-api-health.sh  cleanup-ai-tools.bat  cleanup-disk-space.bat  hooks.json  mcp.json  model-config.json  settings.local.json  start-ai-api.bat  start-ai-api.sh  startup-silent.bat  startup-silent.vbs
.github/: PULL_REQUEST_TEMPLATE.md
api/: coze.js  index.js
backend/: .env.example  Dockerfile  README.md
cli/: pyproject.toml
frontend/: .dockerignore  App.tsx  Dockerfile  README.md  i18n.ts  (+10 more)
(+54 files in other folders)
